Fix broken menu issue on Safari, adjust li fix for Safari

--- a/apps/afs-next/styles/globals.scss
+++ b/apps/afs-next/styles/globals.scss
@@ -91,8 +91,14 @@ strong {
 }
 
 ul {
+  @apply relative;
   li {
-    @apply ml-4 pl-2 relative list-square;
+    @apply ml-4 pl-2 list-square;
+    // left margin adjust for safari browsers
+    @media not all and (min-resolution:.001dpcm){ 
+      @supports (-webkit-appearance:none) and (stroke-color:transparent) {
+        margin-left:1.2rem;
+    }}
     &::marker {
       @apply text-mine;
     }
@@ -164,6 +170,23 @@ ol {
 .hs-form-required {
   @apply text-[#d50032] ml-1;
 }
+
+
+// safari adjustements
+.safari-menu {
+  margin-bottom:-1px;
+  @media not all and (min-resolution:.001dpcm){ 
+    @supports (-webkit-appearance:none) and (stroke-color:transparent) {
+      // a {
+      //   @apply py-2;
+      // }
+      // border-top:2px solid #E1E8ED;
+      // border-bottom:1px solid #E1E8ED;
+      // margin-top:0;
+      // margin-bottom:0;
+  }}
+}
+
 
 /** 
 * mdx generates unstyled html; use this class to apply styles to children
